# typescript-pe33jr

./: .gitignore  BaseViewer.ts  Loader.ts  README.md  Viewer.ts  Viewer2.ts  create_python_env.sh  extrude.html  index.html  index.ts  package-lock.json  package.json  style.css  tsconfig.json  webpack.config.js
app/: index.html  index.js  package-lock.json  package.json  style.css
app/intersection2/: intersection.py  requirements.txt
shell/: CMakeLists.txt  main.cpp
src/: App.ts  BaseViewer.ts  CustomViewer.ts  CustomViewer2.ts  FindShortPath.ts  GeometryLoader.ts  Loader.ts  Types.ts  Viewer.ts  Viewer2.ts  index.ts  preload.ts
src/intersection/: CMakeLists.txt  README.md
src/node-api/: index.ts  intersectionWorker.ts  tmpContentOnDisk.ts  tmpPath.ts
